Fixed import instrument issue